<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">超群业务应用平台</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_address">输入原密码</string>
    <string name="tv_name">用户</string>
    <string name="tv_pwd">密码</string>
    <string name="tv_check">记住我</string>
    <string name="btn_liogin">登陆</string>
    <string name="tv_removePwd">找回密码</string>
    <string name="tv_configuration">服务配置</string>
    <string name="tv_title">超群银行押品权证管理系统</string>
    <string name="tv_configurationAdress">服务地址:</string>
    <string name="setAddress">设置</string>
    <string name="back">&lt;</string>
    <string name="CQKJ">超群科技</string>
    <string name="removeMe">记住我</string>
    <string name="zhmm">找回密码</string>
    <string name="czmm">重置密码</string>
    <string name="retrieveRequest">密码提示问题：</string>
    <string name="retrievedaan">密码提示答案：</string>
    <string name="next">下一步</string>
    <string name="newpwd">输入新密码：</string>
    <string name="newpwdtwo">确定新密码：</string>
    <string name="queding">确定</string>
    <string name="rk">入库</string>
    <string name="ck">出库</string>
    <string name="jy">借用</string>
    <string name="gh">归还</string>
    <string name="pd">盘点</string>
    <string name="cx">查询</string>
    <string name="dlzh">登陆账号:</string>
    <string name="cheshi">124545</string>
    <string name="ymm">输入原密码:</string>
    <string name="pdrw">盘点任务</string>
    <string name="pdlb">盘点列表</string>
    <string name="qzcx">权证查询</string>
    <string name="dqbb">当前版本:</string>
    <string name="u_name">赵敏</string>
    <string name="gang">/</string>
    <string name="show_error">连接失败!</string>
    <string name="show_success">连接成功!</string>
    <string name="zhuxiao">注销</string>
    <string name="kaishisaomiao">开始扫描</string>
    <string name="tingzhisaomiao">停止扫描</string>
    <string name="num1">1.</string>
    <string name="num2">2.</string>
    <string name="num3">3.</string>
    <string name="num4">4.</string>
    <string name="show1">请先点击【开始扫描】读取待入库权证</string>
    <string name="show2">扫表结束后请点击【停止扫描】</string>
    <string name="show3">输入存放位置</string>
    <string name="show4">点击【保存入库单】生成入库单</string>
    <string name="chuku2">请先点击【开始扫描】读取待出库权证</string>
    <string name="chuku">点击【生成押品权证出库单】生成出库单</string>
    <string name="jieyong">点击【生成押品权证借用单】生成借用单</string>
    <string name="jieyong2">请先点击【开始扫描】读取待借用权证</string>
    <string name="guihuan">点击【生成押品权证归还单】生成归还单</string>
    <string name="guihuan2">请先点击【开始扫描】读取待归还权证</string>
    <string name="jieyong3">输入备注信息</string>
    <string name="sn">SN:</string>
    

</resources>