<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="30dp"
        android:background="#E0E0E0" >

        <TextView
            android:id="@+id/tv_uname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/img_jizhuwo"
            android:text="@string/u_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_jizhuwo"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/yonghuicon" />

        <TextView
            android:id="@+id/tv_table_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_uname"
            android:layout_below="@+id/tv_uname"
            android:text="@string/dlzh" />

        <TextView
            android:id="@+id/tv_uid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_table_count"
            android:layout_alignBottom="@+id/tv_table_count"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_table_count"
            android:text="@string/cheshi" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ib_updatepwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="#E0E0E0"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView4"
            style="@style/allword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="修改密码" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="#E0E0E0"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/sback" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ib_renewal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="#E0E0E0"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView5"
            style="@style/allword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="检查更新" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="#E0E0E0"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sback" />
    </RelativeLayout>

</LinearLayout>